<?xml version="1.0"?>
<package format="2">
  <name>rde_cpp</name>
  <version>0.0.1</version>
  <description>A C++ ROS node that publishes hello cpp messages</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
