<?xml version="1.0"?>
<package format="2">
  <name>hello_world_publisher</name>
  <version>0.0.1</version>
  <description>A simple ROS node that publishes hello world messages</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
